tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unbraced-while-body.wyst
module demo
fn main() { while true return }
